--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,42 @@
+# Dependencies
 node_modules/
+.pnp
+.pnp.js
+.yarn/
+
+# Build outputs
 dist/
+cdk.out/
+*.tsbuildinfo
+
+# Environment files
 .env
+.env.local
+.env.*.local
+
+# Logs
 *.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+
+# OS files
 .DS_Store
+Thumbs.db
+
+# IDE
+.vscode/
+.idea/
+*.swp
+*.swo
+*~
+
+# CDK
+cdk.context.json
+.cdk.staging
+
+# Cache
+.cache/
+.turbo/
+.eslintcache
