--- a/package.json
+++ b/package.json
@@ -8,14 +8,18 @@
     "build": "pnpm --filter app build",
     "start": "pnpm --filter app start",
     "build:all": "pnpm -r build",
-    "clean": "pnpm -r exec rm -rf node_modules dist cdk.out .turbo",
+    "clean": "pnpm -r exec rm -rf node_modules dist cdk.out coverage .turbo",
     "clean:all": "pnpm clean && rm -rf node_modules",
     "cdk:deploy": "pnpm --filter cdk deploy",
     "cdk:destroy": "pnpm --filter cdk destroy",
     "cdk:synth": "pnpm --filter cdk synth",
     "cdk:diff": "pnpm --filter cdk diff",
     "lint": "pnpm -r lint --if-present",
-    "test": "pnpm -r test --if-present"
+    "test": "pnpm -r test",
+    "test:app": "pnpm --filter app test",
+    "test:cdk": "pnpm --filter cdk test",
+    "test:coverage": "pnpm -r test:coverage --if-present",
+    "test:watch": "pnpm --filter app test:watch"
   },
   "keywords": [
     "datadog",
