--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -30,6 +30,7 @@
     "dd-trace": "^5.73.0",
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
+    "pino": "^10.1.0",
     "uuid": "^13.0.0"
   },
   "devDependencies": {
