feat: Enhance Datadog Observability Playground with FireLens integration for log forwarding
- Updated README.md to include FireLens log forwarding details.
- Modified architecture.md to reflect the new FireLens log router and its benefits.
- Adjusted deployment.md to outline FireLens integration and log flow.
- Enhanced monitoring.md with log forwarding architecture and benefits of FireLens.
- Updated package.json scripts for deployment consistency.
- Created deploy.sh script for streamlined Docker build, push, and CDK deployment.
- Refactored app.ts to set default region to ap-southeast-1.
- Updated datadog-app-stack.ts to implement FireLens log router and validate ECR images.
- Adjusted CDK package.json to suppress approval prompts during deployment.

--- a/package.json
+++ b/package.json
@@ -10,10 +10,11 @@
     "build:all": "pnpm -r build",
     "clean": "pnpm -r exec rm -rf node_modules dist cdk.out coverage .turbo",
     "clean:all": "pnpm clean && rm -rf node_modules",
-    "cdk:deploy": "pnpm --filter cdk deploy",
-    "cdk:destroy": "pnpm --filter cdk destroy",
-    "cdk:synth": "pnpm --filter cdk synth",
-    "cdk:diff": "pnpm --filter cdk diff",
+    "cdk:deploy": "./scripts/deploy.sh",
+    "cdk:destroy": "pnpm --filter cdk run destroy",
+    "cdk:synth": "pnpm --filter cdk run synth",
+    "cdk:diff": "pnpm --filter cdk run diff",
+    "deploy": "./scripts/deploy.sh dev",
     "lint": "pnpm -r lint --if-present",
     "test": "pnpm -r test",
     "test:app": "pnpm --filter app test",
