--- a/packages/cdk/package.json
+++ b/packages/cdk/package.json
@@ -10,7 +10,7 @@
     "build": "tsc",
     "watch": "tsc -w",
     "cdk": "cdk",
-    "deploy": "cdk deploy",
+    "deploy": "cdk deploy --require-approval never",
     "destroy": "cdk destroy",
     "synth": "cdk synth",
     "diff": "cdk diff",
