feat: add Datadog APM tracer initialization and JWT utility functions
- Created a new tracer.ts file for initializing Datadog APM tracer with runtime metrics and profiling.
- Added jwt.ts utility for generating, verifying, and decoding JWT tokens with error handling and logging.
- Introduced tsconfig.json for TypeScript configuration with strict settings and module resolution.
- Updated pnpm-lock.yaml to include new dependencies for jsonwebtoken and dd-trace.
- Added a dev-local.sh script for local development, allowing building and running services with Docker or directly using pnpm.

--- a/packages/user-service/package.json
+++ b/packages/user-service/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "@datadog-observability-playground/app",
+  "name": "@datadog-observability-playground/user-service",
   "version": "1.0.0",
   "private": true,
-  "description": "Datadog learning application - TypeScript REST API with APM, tracing, and logging",
+  "description": "User authentication microservice with MongoDB, JWT, and Datadog APM",
   "main": "dist/server.js",
   "scripts": {
     "dev": "nodemon --exec ts-node src/index.ts",
@@ -12,29 +12,31 @@
     "start": "node dist/index.js",
     "test": "jest",
     "test:watch": "jest --watch",
-    "test:coverage": "jest --coverage",
-    "test:unit": "jest tests/unit",
-    "test:integration": "jest tests/integration"
+    "test:coverage": "jest --coverage"
   },
   "keywords": [
     "datadog",
     "observability",
-    "apm",
-    "tracing",
-    "logging"
+    "microservice",
+    "authentication",
+    "mongodb",
+    "jwt"
   ],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dd-trace": "^5.73.0",
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
+    "mongoose": "^8.8.4",
     "pino": "^10.1.0",
     "uuid": "^13.0.0"
   },
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.6",
     "@types/cors": "^2.8.19",
     "@types/express": "^5.0.3",
     "@types/jest": "^30.0.0",
