--- a/package.json
+++ b/package.json
@@ -5,9 +5,16 @@
   "description": "Datadog learning playground - TypeScript API with APM, tracing, and logging practice",
   "scripts": {
     "dev": "pnpm --filter app dev",
+    "dev:order": "pnpm --filter order-service dev",
+    "dev:user": "pnpm --filter user-service dev",
+    "dev:all": "pnpm -r --parallel --filter app --filter order-service --filter user-service dev",
     "build": "pnpm --filter app build",
-    "start": "pnpm --filter app start",
+    "build:order": "pnpm --filter order-service build",
+    "build:user": "pnpm --filter user-service build",
     "build:all": "pnpm -r build",
+    "start": "pnpm --filter app start",
+    "start:order": "pnpm --filter order-service start",
+    "start:user": "pnpm --filter user-service start",
     "clean": "pnpm -r exec rm -rf node_modules dist cdk.out coverage .turbo",
     "clean:all": "pnpm clean && rm -rf node_modules",
     "cdk:deploy": "./scripts/deploy.sh",
@@ -18,6 +25,8 @@
     "lint": "pnpm -r lint --if-present",
     "test": "pnpm -r test",
     "test:app": "pnpm --filter app test",
+    "test:order": "pnpm --filter order-service test",
+    "test:user": "pnpm --filter user-service test",
     "test:cdk": "pnpm --filter cdk test",
     "test:coverage": "pnpm -r test:coverage --if-present",
     "test:watch": "pnpm --filter app test:watch"
