--- a/packages/order-service/package.json
+++ b/packages/order-service/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "@datadog-observability-playground/app",
+  "name": "@datadog-observability-playground/order-service",
   "version": "1.0.0",
   "private": true,
-  "description": "Datadog learning application - TypeScript REST API with APM, tracing, and logging",
+  "description": "Order microservice with Datadog APM, tracing, and logging",
   "main": "dist/server.js",
   "scripts": {
     "dev": "nodemon --exec ts-node src/index.ts",
@@ -12,16 +12,13 @@
     "start": "node dist/index.js",
     "test": "jest",
     "test:watch": "jest --watch",
-    "test:coverage": "jest --coverage",
-    "test:unit": "jest tests/unit",
-    "test:integration": "jest tests/integration"
+    "test:coverage": "jest --coverage"
   },
   "keywords": [
     "datadog",
     "observability",
-    "apm",
-    "tracing",
-    "logging"
+    "microservice",
+    "orders"
   ],
   "author": "",
   "license": "ISC",
@@ -30,7 +27,6 @@
     "dd-trace": "^5.73.0",
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
-    "jsonwebtoken": "^9.0.2",
     "pino": "^10.1.0",
     "uuid": "^13.0.0"
   },
@@ -38,7 +34,6 @@
     "@types/cors": "^2.8.19",
     "@types/express": "^5.0.3",
     "@types/jest": "^30.0.0",
-    "@types/jsonwebtoken": "^9.0.7",
     "@types/node": "^24.9.1",
     "@types/supertest": "^6.0.3",
     "@types/uuid": "^10.0.0",
