feat: Initialize frontend application with authentication and product management features
- Added main application structure with routing and layout components.
- Implemented authentication context for user login, registration, and session management.
- Created product management pages including listing, creation, and editing of products.
- Integrated API client for handling requests to authentication and product endpoints.
- Styled components using Ant Design and custom CSS for a responsive layout.
- Added protected routes to secure access to product management features.
- Included SVG assets for branding and icons.

--- a/package.json
+++ b/package.json
@@ -7,10 +7,12 @@
     "dev": "pnpm --filter app dev",
     "dev:order": "pnpm --filter order-service dev",
     "dev:user": "pnpm --filter user-service dev",
+    "dev:frontend": "pnpm --filter frontend dev",
     "dev:all": "pnpm -r --parallel --filter app --filter order-service --filter user-service dev",
     "build": "pnpm --filter app build",
     "build:order": "pnpm --filter order-service build",
     "build:user": "pnpm --filter user-service build",
+    "build:frontend": "pnpm --filter frontend build",
     "build:all": "pnpm -r build",
     "start": "pnpm --filter app start",
     "start:order": "pnpm --filter order-service start",
