--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -134,6 +134,26 @@ services:
       retries: 5
       start_period: 10s
 
+  # Frontend (React UI)
+  frontend:
+    build:
+      context: ./packages/frontend
+      dockerfile: Dockerfile
+      args:
+        - VITE_API_BASE_URL=http://localhost:3000
+        - VITE_AUTH_BASE_URL=http://localhost:3002
+    container_name: frontend
+    ports:
+      - "8080:80"
+    networks:
+      - datadog-playground-network
+    healthcheck:
+      test: ["CMD", "wget", "--quiet", "--tries=1", "--spider", "http://localhost/health"]
+      interval: 30s
+      timeout: 3s
+      start_period: 5s
+      retries: 3
+
   # Datadog Agent
   datadog-agent:
     image: gcr.io/datadoghq/agent:7
