feat: Refactor deployment configuration by replacing pods with deployments for order service and adding environment variables

--- a/k8-test/app-deployment.yaml
+++ b/k8-test/app-deployment.yaml
@@ -18,3 +18,11 @@ spec:
         - name: dd-app-api
           image: "datadog-crud-api:latest"
           imagePullPolicy: Never
+          ports:
+            - containerPort: 3000
+          env:
+            - name: PORT
+              value: "3000"
+            - name: ORDER_SERVICE_URL
+              value: "http://order-service:3001"
+
