feat: Implement user role management and admin routes
- Refactored order service to connect to MongoDB before starting the server.
- Added .env.example file for user service configuration.
- Enhanced CORS configuration in user service.
- Introduced role-based authentication middleware.
- Created admin routes for user management, including fetching, updating roles, and deleting users.
- Updated user model to include roles (USER, MERCHANT, ADMIN).
- Modified authentication and registration routes to handle user roles.
- Added JWT payload to include user role information.
- Updated pnpm-lock.yaml to include mongoose and its types.
- Added a quick start script for setting up the Datadog Observability Playground.

--- a/k8/order-service-deployment.yaml
+++ b/k8/order-service-deployment.yaml
@@ -5,7 +5,7 @@ metadata:
   labels:
     app: order-service
 spec:
-  replicas: 2
+  replicas: 1
   selector:
     matchLabels:
       app: order-service
@@ -25,7 +25,11 @@ spec:
               value: "3001"
             - name: NODE_ENV
               value: "development"
+            - name: MONGODB_URI
+              value: "mongodb://mongo-service:27017/order-service"
             - name: DD_SERVICE
               value: "order-service"
             - name: DD_ENV
               value: "development"
+            - name: DD_VERSION
+              value: "1.0.0"
