--- a/k8/app-deployment.yaml
+++ b/k8/app-deployment.yaml
@@ -5,7 +5,7 @@ metadata:
   labels:
     app: dd-app-api-deployment
 spec:
-  replicas: 3
+  replicas: 1
   selector:
     matchLabels:
       app: dd-app-api
@@ -23,6 +23,18 @@ spec:
           env:
             - name: PORT
               value: "3000"
+            - name: NODE_ENV
+              value: "development"
+            - name: MONGODB_URI
+              value: "mongodb://mongo-service:27017/product-service"
             - name: ORDER_SERVICE_URL
               value: "http://order-service:3001"
+            - name: JWT_SECRET
+              value: "your-secret-key-change-in-production"
+            - name: DD_SERVICE
+              value: "product-service"
+            - name: DD_ENV
+              value: "development"
+            - name: DD_VERSION
+              value: "1.0.0"
 
