--- a/packages/app/.env.example
+++ b/packages/app/.env.example
@@ -1,10 +1,19 @@
 # Application Configuration
 PORT=3000
-NODE_ENV=production
+NODE_ENV=development
+
+# MongoDB Configuration
+MONGODB_URI=mongodb://localhost:27017/product-service
+
+# JWT Configuration
+JWT_SECRET=your-secret-key-change-in-production
+
+# Order Service URL
+ORDER_SERVICE_URL=http://localhost:3001
 
 # Datadog Configuration
-DD_SERVICE=test-datadog-crud-api
-DD_ENV=production
+DD_SERVICE=product-service
+DD_ENV=development
 DD_VERSION=1.0.0
 DD_AGENT_HOST=datadog-agent
 DD_TRACE_AGENT_PORT=8126
