--- a/packages/order-service/package.json
+++ b/packages/order-service/package.json
@@ -27,6 +27,7 @@
     "dd-trace": "^5.73.0",
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
+    "mongoose": "^8.8.4",
     "pino": "^10.1.0",
     "uuid": "^13.0.0"
   },
@@ -34,6 +35,7 @@
     "@types/cors": "^2.8.19",
     "@types/express": "^5.0.3",
     "@types/jest": "^30.0.0",
+    "@types/mongoose": "^5.11.97",
     "@types/node": "^24.9.1",
     "@types/supertest": "^6.0.3",
     "@types/uuid": "^10.0.0",
